syntax = "proto3";

package auth;

option go_package = "./proto;auth";

message LoginRequest {
  string email = 1;
  string password = 2;
  string ReCaptcha=3;
}

message LoginResponse {
  bool Success = 1;
  string error = 2;
  string JWTToken = 3;
}


message RegisterRequest {
  string Email=1;
  string Password=2;
  string ReCaptcha=3;

}

message RegisterResponse {
  bool Success = 1;
  string error = 2;
  string JWTToken = 3;
}

message ValidateJWTRequest {
  string token = 1;
}

message ValidateJWTResponse {
  bool Success = 1;
  string error = 2;
  string userID= 3;
}




service AuthService{
  rpc Login(LoginRequest) returns (LoginResponse) {}
  rpc Register(RegisterRequest) returns (RegisterResponse) {}
  rpc Validate(ValidateJWTRequest) returns (ValidateJWTResponse) {}
}